support on-premise odata calls from task ui

--- a/approuter/xs-app.json
+++ b/approuter/xs-app.json
@@ -1,4 +1,12 @@
 {
 	"welcomeFile": "/cp.portal",
-	"authenticationMethod": "route"
+    "authenticationMethod": "route",
+    "routes": [        
+        {
+            "source": "^/gateway/(.*)$",
+            "target": "/$1",
+            "destination": "gateway",
+            "authenticationType": "none"
+        }
+    ]
 }
